# particles

./: AGENTS.md  Cargo.toml  README.md
assets/params/: camera.ron  generation.ron  interface.ron  material.ron  overlay.ron  palette.ron  physics.ron  render.ron
assets/shaders/: mpm_drift.wgsl  mpm_g2p.wgsl  mpm_grid_update.wgsl  mpm_p2g.wgsl  particle_overlay_gpu.wgsl
configs/autoverify/: default_world_far_spawn_chunk_growth.json  default_world_paused_screenshot.json  overlay_chunk_active_tiles_water_drop.json  overlay_chunk_delete_surface_visible.json  overlay_chunk_modified_highlight.json  overlay_chunk_modified_solid_highlight.json  overlay_mass_water_drop.json  overlay_particle_water_drop.json  overlay_sdf_alignment_default_world.json  overlay_visibility_default_world.json  profile_hud_water_drop.json  sand_water_interaction_drop.json  sand_water_interaction_drop_screenshot.json  soil_repose_drop.json  soil_repose_drop_long.json  soil_repose_drop_long_bug.json  soil_repose_drop_long_bug_screenshot_late.json  soil_repose_drop_long_fix.json  soil_repose_drop_long_fix_screenshot_late.json  soil_repose_drop_long_screenshot.json  soil_repose_drop_long_screenshot_late.json  soil_repose_drop_screenshot.json  terrain_dot_layer_hole_water_drop.json  terrain_edit_delete_far_back_visible.json  terrain_edit_delete_tool.json  terrain_edit_load_override.json  (+13 more)
docs/: adr-0001-mls-mpm-multirate-architecture.md  chunks.md  design.md  dev_environment.md  physics.md  physics_XPDB.md  render.md  tasks.md
src/: camera_controller.rs  lib.rs  main.rs
tests/: physics_scenarios.rs
(+141 files in other folders)
