[package]
name = "particles"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev_fast_link"]
dev_fast_link = ["bevy/dynamic_linking"]
tracy = ["bevy/trace", "dep:tracing-tracy"]

[dependencies]
bevy = { version = "0.18", features = ["file_watcher"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
tracing-tracy = { version = "0.11.4", default-features = false, features = ["enable", "ondemand", "broadcast"], optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
