[package]
name = "particles"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev_fast_link"]
dev_fast_link = ["bevy/dynamic_linking"]
tracy = ["dep:tracing-tracy"]

[dependencies]
bevy = { version = "0.18", features = ["file_watcher", "trace"] }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
directories = "5"
libc = "0.2"
tracing-tracy = { version = "0.11.4", default-features = false, features = ["enable", "ondemand", "broadcast"], optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
noise = "0.9"
bevy-inspector-egui = "0.36.0"
tracing = "0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
wgpu = "27.0.1"
wgpu-profiler = "0.25.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
